Fix Menu for Opera

--- a/vera/webinterface/widescreen.css
+++ b/vera/webinterface/widescreen.css
@@ -24,6 +24,9 @@
 	.ui-header .ui-btn {
 		display: none;
 	}
+	.position-left { 
+		left: 0em;
+	}
 	.ui-panel-animate.ui-panel-position-left.ui-panel-display-overlay, .ui-panel-animate.ui-panel-position-left.ui-panel-display-push {
         transform: translate3d(0em, 0px, 0px);
     }
